--- a/oehealth_idn/report/report_menu.xml
+++ b/oehealth_idn/report/report_menu.xml
@@ -34,7 +34,7 @@
 
     <report id="rujukan_pasien_report_menu" string="Rujukan External" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_rujukan_pasien" menu="True" />
 
-    <report id="perintah_rawat_inap_report_menu" string="Perintah Rawat Inap" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_perintah_rawat_inap" menu="True" />
+    <report id="perintah_rawat_inap_report_menu" string="Surat Perintah Rawat Inap" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_perintah_rawat_inap" menu="True" />
 
     <report id="pengkajian_report_menu" string="Form Pengkajian Awal Klinis Rawat Jalan" model="oeh.medical.evaluation" report_type="qweb-pdf" name="oehealth_idn.report_pengkajian_rawat_jalan" menu="True" />
 
