--- a/oehealth_idn/views/unit_view.xml
+++ b/oehealth_idn/views/unit_view.xml
@@ -73,6 +73,10 @@
             <field name="name" position="after">
                 <field name="type"/>
             </field>
+
+            <xpath expr="//field[@name='name']" position="after">
+                <field name="unit_address"/>
+            </xpath>
         </field>
     </record>
 </odoo>
