--- a/oehealth_idn/views/medical_physician_view.xml
+++ b/oehealth_idn/views/medical_physician_view.xml
@@ -8,6 +8,7 @@
         <field name="arch" type="xml">
 
             <xpath expr="//field[@name='is_pharmacist']" position="after">
+                <field name="is_nurse"/>
                 <field name="is_doctor"/>
                 <field name="physician_position"/>
             </xpath>
